# NodeNormalizationAPI

./: docker-compose.yml  pyproject.toml
deploy/: Chart.yaml  Jenkinsfile  deploy.sh  values.yaml
deploy/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
docker/: Dockerfile
docker/configuration/: Caddyfile  config.json  supervisord.conf
src/nodenorm/: __main__.py  application.py  namespace.py  server.py  version.py
src/nodenorm/application/configuration/: default.json
src/nodenorm/config/: config.default.json
src/nodenorm/handlers/: __init__.py  conflations.py  curie_prefix.py  health.py  normalized_nodes.py  semantic_types.py  set_identifiers.py  version.py
src/nodenorm/webapp/: openapi.json
tests/: test_normalized_nodes.py  test_normalized_nodes_lookup.py  test_set_identifiers.py  test_version.py
